    - Don't use "if ! ..." in shell scripts, because ksh in HP-UX doesn't
      support this.
  * Make dotlock.c more portable.
  * Make Makefile.in much more portable.
  * Merge in changes of dotlock program from Mutt 0.96.6.
  * Upgraded Debian standards version to 3.0.1:
    - GPL now in /usr/share/common-licenses/
    - /usr/man -> /usr/share/man

 -- Roland Rosenfeld <roland@debian.org>  Tue,  7 Sep 1999 21:38:51 +0200

lbdb (0.18.1) unstable; urgency=low

  * Always build Debian binary with m_pgp2, m_pgp5 and m_gpg (ignoring
    whether the different PGP binaries are installed).
  * Merged in changes from Mutt's dotlock (CVS as of 1999-08-01).
  * Use "$@" instead of $1 in m_* files to allow `lbdb First Last' without 
    quotes around "First Last" (Closes: #42417).

 -- Roland Rosenfeld <roland@debian.org>  Wed,  4 Aug 1999 00:44:58 +0200

lbdb (0.18) unstable; urgency=low

  * Splited lbdb-fetchaddr.man off from lbdbq.man.
  * Moved lbdb-fetchaddr from $bindir to $libdir.
  * Added Fido module m_fido and nodelist2lbdb.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 23 Jun 1999 18:22:53 +0200

lbdb (0.17.1) unstable; urgency=low

  * Upgraded autoconf from 2.12 to 2.13.
    Get rid of `echo $PATH | sed "s/:/ /g"` in AC_PATH_PROC() macro,
    because this isn't needed and doesn't work with autoconf 2.13.
  * Removed word boundary check in m_inmail, because this is only
    available in GNU grep.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 25 May 1999 15:53:53 +0200

lbdb (0.17) unstable; urgency=low

  * Delay munging of mails when using lbdb-fetchaddr/m_inmail by adding a
    new script lbdb-munge, which is run by lbdbq and can be run by cron
    additionally. Thanks to Enrico Zini <zinie@cs.unibo.it> for the base
    idea of this.
  * Made lbdb-fetchaddr Y2K compliant by changing the date format which is 
    written to the 3rd column of m_inmail.list to "%Y-%m-%d %H:%M" (e.g.
    "1999-04-29 14:33").