@@ -14,6 +14,8 @@ $Id$
   may no longer use mutt_dotlock but always use a private
   lbdb_dotlock.
 
+- Find out why fetchaddr sometimes runs forever on Solaris 2.6.
+
 
 Roland Rosenfeld <roland@spinnaker.de>
 
