@@ -10,8 +10,10 @@ lbdb (0.18.2) unstable; urgency=low
   * Upgraded Debian standards version to 3.0.1:
     - GPL now in /usr/share/common-licenses/
     - /usr/man -> /usr/share/man
+  * Add -v and -h options to lbdbq and lbdb-fetchaddr which display the
+    version of lbdb and a short help.
 
- -- Roland Rosenfeld <roland@debian.org>  Tue,  7 Sep 1999 21:38:51 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Wed, 15 Sep 1999 11:42:19 +0200
 
 lbdb (0.18.1) unstable; urgency=low
 
